--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.16.0",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
